fix characters slider bug on IOS

--- a/src/assets/css/characters.css
+++ b/src/assets/css/characters.css
@@ -245,18 +245,17 @@
    padding-bottom: 1rem !important;
 }
 /*optimization for swiper*/
-.swiper-slide {
-   will-change: transform;
-   backface-visibility: hidden;
-   -webkit-backface-visibility: hidden;
-   transform-style: preserve-3d;
-   -webkit-transform-style: preserve-3d;
-   touch-action: manipulation;
-   -webkit-tap-highlight-color: transparent;
-   transition: transform 0.8s ease, opacity 0.5s ease;
-   overflow: visible !important;
+.character-slide {
+   transition: transform 0.3s ease, opacity 0.3s ease;
+   pointer-events: none;
+   transform: scale(0.94) translateX(-10px);
+   opacity: 0.5;
+   z-index: 1;
 }
-.swiper-slide-active {
+
+.swiper-slide-active.character-slide {
    pointer-events: auto;
-   z-index: 100 !important;
+   transform: scale(1) translateX(0);
+   opacity: 1;
+   z-index: 10;
 }
